Add RU APIs to user
